test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-oknil-owned.good
init-field-dflt-nonnil-owned-from-oknil-owned.chpl:11: error: default-initializing a field with a non-nilable type owned MyClass from an instance of nilable owned MyClass?
